--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,6 +252,9 @@ label, .input-group-text, thead {
         right: 0;
         bottom: 0;
       }
+      .blog img {
+        width: 100% !important;
+    }
   }
 
   .pattern-1 {
@@ -265,3 +268,8 @@ label, .input-group-text, thead {
   .z-in-1 {
     z-index: 1;
   }
+
+  .a2a_svg,
+.a2a_menu_find_container {
+  border-radius: 100% !important;
+}
